# visual_localization

./: CMakeLists.txt  README.md  package.xml
launch/: remap.launch
src/: optical_fake_localization.cpp
