<package>
    <name>visual_localization</name>
    <version>1.0.0</version>
    <description>Modification of the fake_localization package to work with the information of a camera pose.</description>
    <author>Ioan A. Sucan</author>
    <author>contradict@gmail.com</author>
    <maintainer email="dremiam@gmail.com">Cristopher Gomez</maintainer>
    <url>http://wiki.ros.org/fake_localization</url>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>angles</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>rospy</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>rosconsole</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>rospy</run_depend>

</package>
